# bevy_mod_erased_component_registry

./: CHANGELOG.md  Cargo.toml  book.toml  codecov.yml  readme.md  release-plz.toml
.credits/: credits.md
.credits/licenses/: Bevy_MIT_License.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml  config.yml
crates/bevy_mod_erased_component_registry/: Cargo.toml
crates/bevy_mod_erased_component_registry/examples/: erased_component_registry_example.rs
crates/bevy_mod_erased_component_registry/src/: entity_command_extension_insert_erased_component.rs  plugin.rs  registry.rs
scripts/: link_assets.sh
scripts/hooks/: pre-push
