[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
homepage = "https://github.com/AlexAegis/bevy_mod_erased_component_registry"
repository = "https://github.com/AlexAegis/bevy_mod_erased_component_registry"
documentation = "https://github.com/AlexAegis/bevy_mod_erased_component_registry"
authors = ["alexaegis"]
license-file = "license"
readme = "readme.md"

publish = true

[workspace.lints.clippy]
type_complexity = "allow"

# Enable a small amount of optimization and disable debug info for faster builds
[profile.dev]
opt-level = 1
incremental = true
debug = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.test]
incremental = true

[profile.release]
incremental = true
debug = 0

[workspace.dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "multi_threaded",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_winit",
    "bevy_window",
    "bevy_render",
    "png",
    "x11",
    "bevy_gilrs",
    "bevy_scene",
    "animation",
    "file_watcher",
    "bevy_gltf",
    "bevy_log",
] }
bevy_app = { version = "0.16.1", default-features = false }
bevy_ecs = { version = "0.16.1", default-features = false }
bevy_platform = { version = "0.16.1", default-features = false }
bevy_ptr = { version = "0.16.1", default-features = false }
bevy-inspector-egui = { version = "0.31.0", default-features = false }
bevy_egui = { version = "0.34.1", features = ["immutable_ctx"] }
rand = { version = "0.9.2" }
derive-where = { version = "1.4.0" }
# Workspace Crates
bevy_mod_erased_component_registry = { path = "crates/bevy_mod_erased_component_registry" }
