[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
homepage = "https://github.com/AlexAegis/bevy_mod_erased_component_registry"
repository = "https://github.com/AlexAegis/bevy_mod_erased_component_registry"
documentation = "https://github.com/AlexAegis/bevy_mod_erased_component_registry"
authors = ["alexaegis"]
license = "MIT"
readme = "readme.md"

publish = true

[workspace.lints.clippy]
type_complexity = "allow"

# Enable a small amount of optimization and disable debug info for faster builds
[profile.dev]
opt-level = 1
incremental = true
debug = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.test]
incremental = true

[profile.release]
incremental = true
debug = 0

[workspace.dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_window",
    "bevy_winit",
    "file_watcher",
    "ktx2",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "std",
    "tonemapping_luts",
    "x11",
    "zstd_rust",
] }
bevy_app = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17", default-features = false }
bevy_platform = { version = "0.17", default-features = false }
bevy_ptr = { version = "0.17", default-features = false }
bevy-inspector-egui = { version = "0.35.0", default-features = false, features = [
    "bevy_render",
] }
bevy_egui = { version = "0.38.0", default-features = false, features = [
    "immutable_ctx",
] }
rand = { version = "0.9.2", default-features = false, features = [
    "thread_rng",
] }
derive-where = { version = "1.4.0", default-features = false }
# Workspace Crates
bevy_mod_erased_component_registry = { path = "crates/bevy_mod_erased_component_registry" }
