[package]
name = "bevy_mod_erased_component_registry"
description = "Insert components into entities by their `TypeId`!"
version = "0.2.0"
readme = "../../readme.md"
publish = true

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
dev = ["bevy/dynamic_linking"]
example = ["dev"]

[dependencies]

derive-where = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_platform = { workspace = true }
bevy_ptr = { workspace = true }

[dev-dependencies]
bevy = { workspace = true }
rand = { workspace = true }
bevy_egui = { workspace = true }
bevy-inspector-egui = { workspace = true }


[[example]]
name = "erased_component_registry_example"
path = "examples/erased_component_registry_example.rs"
required-features = ["example"]
